--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	},
 	"devDependencies": {
 		"@types/node": "^15.12.0",
+		"@types/react": "^17.0.9",
+		"@types/react-dom": "^17.0.6",
 		"@typescript-eslint/eslint-plugin": "^4.15.0",
 		"@typescript-eslint/parser": "^4.15.0",
 		"discord-api-types": "^0.18.1",
@@ -26,6 +28,8 @@
 		"next": "^10.2.3",
 		"querystring": "^0.2.1",
 		"raw-body": "^2.4.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"temp": "^0.9.4",
 		"tweetnacl": "^1.0.3"
 	}
