--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
 		"silent": true
 	},
 	"functions": {
-		"api/interaction.js": {
+		"api/interaction.*": {
 			"includeFiles": "commands/**"
 		}
 	}
