--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
+		"isolatedModules": true,
 		"jsx": "preserve"
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
