--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"now-build": "npm run build",
-		"start": "next start"
+		"start": "next start",
+		"postinstall": "patch-package"
 	},
 	"devDependencies": {
 		"@types/node": "^15.12.0",
@@ -19,13 +20,14 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
-		"discord-api-types": "^0.18.1",
+		"discord-api-types": "^0.19.0",
 		"dotenv": "^10.0.0",
 		"file-type": "^16.5.0",
 		"gifwrap": "^0.9.2",
 		"jimp": "^0.16.1",
 		"lru-cache": "^6.0.0",
 		"next": "^10.2.3",
+		"patch-package": "^6.4.7",
 		"querystring": "^0.2.1",
 		"raw-body": "^2.4.1",
 		"react": "^17.0.2",
