--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"typescript": "^4.3.2"
 	},
 	"dependencies": {
+		"@discordjs/form-data": "^3.0.1",
 		"axios": "^0.21.1",
 		"discord-api-types": "^0.19.0",
 		"dotenv": "^10.0.0",
