--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"discord-api-types": "^0.19.0",
 		"dotenv": "^10.0.0",
 		"file-type": "^16.5.0",
+		"firebase": "^9.0.0-beta.6",
 		"gifwrap": "^0.9.2",
 		"jimp": "^0.16.1",
 		"lru-cache": "^6.0.0",
