--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"postinstall": "npx patch-package"
 	},
 	"devDependencies": {
+		"@types/lru-cache": "^5.1.1",
 		"@types/node": "^15.12.0",
 		"@types/react": "^17.0.9",
 		"@types/react-dom": "^17.0.6",
